Fix CSS layout bug on gallery at 320px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,7 @@ nav {
     column-count: 2;
     column-gap: 20px;
     max-width: 1000px;
+    min-width: 300px;
     margin: 0 auto;
 }
 
